--- a/CRUD-master/src/main/resources/application.properties
+++ b/CRUD-master/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 db.driver = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://127.0.0.1:3306/crud?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
+db.url = jdbc:mysql://127.0.0.1:3306/kata?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
 db.username = root
 db.password = root
 
